# Landscape

./: .env.example  .gitignore  README.md
docs/: api-notes.md
src/backend/: README.md  pyproject.toml
src/backend/app/: config.py  main.py  models.py
src/backend/app/clients/: gemini.py  humandelta.py
src/backend/app/routers/: company.py  crawl_history.py  expand.py  query.py
src/backend/app/services/: db.py  edge_persist.py  extractor.py  index_cache.py  indexer.py  temporal_store.py
src/backend/scripts/: extract.py  stream_test.py
src/backend/tests/: test_page_classification.py  test_temporal_store.py
src/frontend/: package-lock.json  package.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/components/: ExpandModal.tsx  GraphCanvas.tsx  HudCorners.tsx  Legend.tsx  QueryBar.tsx  ResearchControls.tsx  SidePanel.tsx  StatusBar.tsx  TelemetryChips.tsx
src/frontend/src/hooks/: useQueryStream.ts  useResearchStore.ts
src/frontend/src/lib/: expand.ts  graph.ts  researchStore.ts  sse.ts  types.ts
